# local-code-interpreter-tool

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SKILL.md  function_app.py  host.json  justfile  local.settings.sample.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  task-hyperlight-integration.md  task.md
.claude/skills/execute-code/: .gitignore  REFERENCE.md  SKILL.md
.claude/skills/execute-code/scripts/: run.py  setup.sh
.github/: agents.md  copilot-instructions.md  copilot-setup-steps.yml
.github/agents/: readme.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  skill-independence.yml
docs/: add-azure-foundry-claude-support.plan.md  plan-configurableCodeExecution.prompt.md  plan-k8s-deploy.plan.md
infra/: README.md  azure-openai.bicep
k8s/: configmap.yaml  deployment.yaml  device-plugin.yaml  kustomization.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
src/local_code_interpreter/: __init__.py  __main__.py  agent.py  shared.py  tools.py
tests/: __init__.py  test_shared.py  test_tools.py
